--- a/src/main/webapp/pages/MyFees/MyFees.html
+++ b/src/main/webapp/pages/MyFees/MyFees.html
@@ -30,15 +30,16 @@
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow5" padding="1em unset">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn7">
-                                        <wm-grid title="" dataset="bind:Variables.svfetchUnpaidFeesOfFormsForCreatedByAndSharedWith.dataSet.content" navigation="Classic" name="gridUnpaidFees" filtermode="multicolumn" showrecordcount="true" exportformat="EXCEL"
-                                        pagesize="20">
-                                            <wm-grid-column binding="formTitle" caption="Form Title" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
-                                            <wm-grid-column binding="formType" caption="Form" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                                        <wm-grid title="" dataset="bind:Variables.svfetchUnpaidFeesOfFormsForCreatedByAndSharedWith.dataSet" navigation="Classic" name="gridUnpaidFees">
+                                            <wm-grid-column binding="formType" caption="Form Design" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                             <wm-grid-column binding="municipalityName" caption="Municipality" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
-                                            <wm-grid-column binding="feeType" caption="Fee" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
-                                            <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true"></wm-grid-column>
+                                            <wm-grid-column binding="address" caption="Address" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                                            <wm-grid-column binding="feeType" caption="Fee Type" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                                            <wm-grid-column binding="balanceDue" caption="Amount" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                                            <wm-grid-column binding="formTitle" caption="Form Title" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                                            <wm-grid-column binding="rowOperations" caption="Actions" type="custom" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true"></wm-grid-column>
                                             <wm-grid-action key="addNewRow" display-name="Add All to Cart" show="true" class="btn-primary" iconclass="wi wi-add-shopping-cart" title="Add All to Cart" action="addNewRowAction($event)" shortcutkey=""
-                                            disabled="false" icon="wi wi-add-shopping-cart"></wm-grid-action>
+                                            disabled="false"></wm-grid-action>
                                             <wm-grid-row-action key="deleterow" display-name="" show="bind:!itemInCart(row.getProperty('feeId'))" class="btn-transparent" iconclass="wi wi-add-shopping-cart" title="Add to Cart" action="Variables.svInsertIntoCart.invoke()"
                                             disabled="false"></wm-grid-row-action>
                                             <wm-grid-row-action key="updaterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pageview" title="View Source" action="updaterowAction($event)" disabled="false"></wm-grid-row-action>
