--- a/src/main/webapp/pages/MyMessages/MyMessages.html
+++ b/src/main/webapp/pages/MyMessages/MyMessages.html
@@ -53,7 +53,7 @@
                                     <wm-grid-column binding="sourceTitle" caption="Source Title" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                     <wm-grid-column binding="municipalityName" caption="Municipality" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                     <wm-grid-column binding="postedByFullName" caption="Sent By" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
-                                    <wm-grid-column binding="postedAt" caption="Date Sent" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                                    <wm-grid-column binding="postedAt" caption="Date Sent" type="string" datepattern="MM-dd-yy hh:mm a" formatpattern="toDate" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                     <wm-grid-column binding="message" caption="Message" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                     <wm-grid-column binding="municipalityMessage" caption="Internal" type="string" widget-type="checkbox" accessroles="CodeManager,CodeOfficer,CXAdmin,Inspector,InspectorManager,MunicipalityAdmin,MunicipalityEmployee"
                                     edit-widget-type="text" show="true" readonly="false">
